# myLLM

./: .env.example  CLAUDE.md  README.md  benchmark_results.json  pyproject.toml
scripts/: benchmark.sh  deploy.sh  teardown.sh
src/: benchmark.py  modal_app.py
ui/: demo_ui.html
